let admins see all albums
